--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "tsc": "tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "0.2.2",
@@ -46,6 +47,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.0",
+    "@types/jest": "^29.2.5",
     "@types/react": "18.0.15",
     "@types/react-native": "0.67.6",
     "@types/react-native-dotenv": "^0.2.0",
@@ -55,12 +59,21 @@
     "eslint": "8.19.0",
     "eslint-config-universe": "11.0.0",
     "eslint-plugin-import-helpers": "1.2.1",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "prettier": "2.7.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-test-renderer": "17",
     "typescript": "4.3.5"
   },
   "private": true,
   "eslintConfig": {
     "extends": "universe/native"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ]
   }
 }
