--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "0.2.2",
     "@hookform/resolvers": "2.9.7",
-    "@react-native-async-storage/async-storage": "1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "6.3.2",
     "@react-navigation/native": "6.0.11",
     "@react-navigation/stack": "^6.2.3",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "7.12.9",
     "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^11.5.0",
     "@types/jest": "^29.2.5",
     "@types/react": "18.0.15",
@@ -61,19 +62,15 @@
     "eslint-plugin-import-helpers": "1.2.1",
     "jest": "^26.6.3",
     "jest-expo": "^47.0.1",
+    "jest-styled-components": "^7.1.1",
     "prettier": "2.7.1",
     "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "17",
+    "react-test-renderer": "16.14.0",
+    "ts-jest": "26.5.6",
     "typescript": "4.3.5"
   },
   "private": true,
   "eslintConfig": {
     "extends": "universe/native"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-native/extend-expect"
-    ]
   }
 }
