--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-apple-authentication": "~4.2.1",
     "expo-auth-session": "~3.6.1",
     "expo-font": "10.1.0",
+    "expo-modules-autolinking": "0.9.0",
     "expo-random": "~12.2.0",
     "expo-splash-screen": "0.15.1",
     "expo-status-bar": "1.3.0",
