--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-random": "~12.2.0",
     "expo-splash-screen": "0.15.1",
     "expo-status-bar": "1.3.0",
+    "expo-updates": "~0.13.4",
     "intl": "^1.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
